<?xml version="1.0" encoding="utf-8"?>
<resources
  xmlns:tools="http://schemas.android.com/tools"
  tools:ignore="MissingTranslation" >

    <string name="app_name">Mista Reader</string>
    <string name="sSettings">Настройки</string>
    <string name="sTheme">Тема оформления</string>
        
    <string name="sThemeGray">Серая</string>
    <string name="sThemeLight">Светлая</string>
    <string name="sThemePureBlack">Черная</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="sample_text">Sample text</string>
    
    <string name="sAllSections">Mista.ru</string>
    <string name="sNavDrawerMore">Больше...</string>
    <string name="sNavDrawerLess">Меньше...</string>
    <string name="sNavDrawerAll">Все</string>
    <string name="sNavDrawerSect1">ФОРУМЫ</string>
    <string name="sNavDrawerSect2">НАСТРОЙКИ</string>
    <string name="sLoading">Загрузка...</string>
    
    
    <string name="sAuthorization">Авторизация</string>
    <string name="sAccount">Аккаунт</string>
    <string name="sNotAuthorized">&lt;Не авторизован&gt;</string>
    <string name="sLogin">Логин</string>
    <string name="sPassword">Пароль</string>
    <string name="sAuthorizationError">Ошибка авторизации</string>
    
    <string name="sExitTitle">Программа будет закрыта</string>
    <string name="sExitConfirmation">Вы уверены?</string>
    <string name="sYes">Да</string>
    <string name="sNo">Нет</string>
 
    <string name="sDoLogin">Войти</string>
    <string name="sCancel">Отмена</string>
    
    <string name="sMyTopics">Мои темы</string>
    <string name="sMyTopics2">Темы с участием</string>
    
    <string name="sNewTopic">Новая тема</string>
    <string name="sSubject">Тема</string>
    <string name="sMessage">Сообщение</string>
    <string name="sCreate">Создать</string>
    <string name="sSection">Секция</string>
  
	<string name="sNewMessage">Новое сообщение</string>
	<string name="sNewMessages">Новые сообщения:</string>
	
	<string name="sPopupMenuHeader">Действия с темой</string>
	
	<string name="sMenuGoToFirstMessage">К первому сообщению</string>
	<string name="sMenuGoToLastMessage">К последнему сообщению</string>
	<string name="sAddToSubscription">Подписаться на тему</string>
	<string name="sRemoveFromSubscriptions">Удалить из подписок</string>
	
	<string name="sPopupMenyHeaderMessage">Действия с сообщением</string>
	<string name="sMenuRelyToThis">Ответить</string>
	
	<string name="sNoConnections">Нет связи с интернет!</string>
	<string name="sIsVote">Голосование</string>
	<string name="sVote1">Вариант 1</string>
	<string name="sVote2">Вариант 2</string>
	<string name="sVote3">Вариант 3</string>
	<string name="sVote4">Вариант 4</string>
	<string name="sVote5">Вариант 5</string>
	<string name="sVoteResults">Результаты голосования:</string>
	<string name="sVoteHint">Пункт голосования</string>
	<string name="sVoteError">Укажите как минимум 2 варианта голосования!</string>
	<string name="sTopicError">Введите тему</string>
	<string name="sMessageError">Введите текст сообщения</string>	
	<string name="sError">Ошибка!</string>
	
	
	<string name="sLogoff">Выйти из аккаунта</string>
	<string name="sAbout">О программе</string>
	
	<string name="sAboutDetailsVersion">Версия: 1.5.1</string>
	<string name="sAboutDetails">Разработка: vhl</string>
	<string name="sAboutDetails2">При поддержке: Asmody</string>
	<string name="sAboutMarket">Оценить приложение</string>

	<string name="sTotalNew">Всего новых:</string>
	
	<string name="sOther">Прочее</string>
	<string name="sSubscriptions">Подписки</string>
	<string name="sSubscriptionsUse">Использовать подписки</string>
	<string name="sSubscriptionsNew">Новые сообщения в подписках</string>
	<string name="sSubscriptionsUseD">Проверять наличие новых сообщений в темах</string>
	<string name="sSubscriptionsInterval">Периодичность опросов</string>
	
	<string name="sNotificationsShowInBar">Уведомления</string>
	<string name="sNotificationsShowInBarD">Выводить всплывающие уведомления в строке статуса</string>
	<string name="sNotificationsVibrate">Вибрация</string>
	<string name="sNotificationsVibrateD">Вибрировать при уведомлениях</string>
	<string name="sNotificationsSound">Звук</string>
	<string name="sNotificationsSoundD">Звук при уведомлениях</string>
	<string name="sNotificationsLED">Световой индикатор</string>
	<string name="sNotificationsLEDD">Использовать световую индикацию при уведомлениях</string>
	
	<string name="sReloadSections">Обновить секции</string>
	<string name="sReloadSectionsD">Загрузить названия секций с сервера</string>
	
	<string name="sWHatsNew">Что нового</string>
	<string name="sWHatsNewDetal1">Список изменений:</string>
	<string name="sWHatsNewDetal2"><Data><![CDATA[
	    <b>Версия: 1.5.1:<br><br></b>
	    * Теперь всплывающие уведомления очищаются при запуске программы<br>
	    * Багфиксы<br><br>	    
	    <b>Версия: 1.5:<br><br></b>
	    + Реализованы подписки на новые сообщения в темах. Добавлено отдельное подменю \"Подписки\". При длинном тапе на тему можно подписываться/отписываться.
	    В настройках добавлены параметры уведомлений на новые сообщения в подписках. Количество подписок ограничено - 10ю.<br>
	    + При повторном входе в тему - позиционирование происходит на последнее просмотренно сообщение. При выходе - позиция запоминается.<br>
	    + Если форум когда-нибудь поменяет список секций, в меню настроек добавлена кнопка \"Обновить секции\".<br>  
	    * Настройки выделены в отдельно меню.<br>
	    * Багфиксы.<br><br>
	    <b>Версия: 1.2.2:<br><br></b>
	    + Добавлена полноценная поддержка голосований: отображение результатов/добавление ответов/добавление темы.<br>
	    * Багфиксы.<br><br>
	     <b>Версия: 1.1.1:<br><br></b>
	    * Исправлена проблема с отсутствием отображения только что добавленного сообщения.<br>
	    * Добавлено автоматическое обновление сессии при запуске программы.<br>
	    * Добавлена дополнительная проверка наличия связи с интернетом.<br>
	    * Исправлены ошибки, возникающие при смене тем, а так же задваивание номеров ответов.<br><br>
	     <b>Версия: 1.1:<br><br></b>
	    + Добавлена возможность перехода к последнему сообщению в теме: по лонг-тапу в списке тем.<br>
		+ Добавлено автовставка номера сообщения при ответе: по лонг тапу на сообщении.<br>
		* При переходе к последнему сообщению \"по стрелочке\" теперь загружаются не вся тема, а только 20 последних сообщений.<br> 	     
	    * Теперь при добавлении тем и сообщений первое слово будет автоматически начинаться с большой буквы.<br>
	    * Перенес список ответов на сообщение вправо. Посмотрим что получится.<br><br>
	    <b>Версия: 1.0.3:<br><br></b>
	    * Кнопка \"Обновить\" при нахождении в конце темы догружает 20 новых сообщений, а не перечитывает тему заново<br>  
	    * Вернул картинку боковой стрелки в светлую тему<br>
	    * Добавлено еще немного стабильности при обновлении списков :)<br><br> 
	    <b>Версия: 1.0.2:<br><br></b>
	    * Исправлены крэши при обновлении списков при низкой скорости соединения<br>
	    * Теперь скроллинг сообщений в теме происходит плавнее]]></Data></string>
	
	
<!-- Диалоговые сообщения-->
 
	<string name="sAuthorizationInProgress">Авторизация...</string>
	<string name="sAddingInProgress">Добавление...</string>
    
        
</resources>