<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tvVote2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/app_name"
        android:textSize="@dimen/text_main_size"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textAboutVersion"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/sAboutDetailsVersion"
        android:textSize="@dimen/text_other_size" />

    <TextView
        android:id="@+id/textAbout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/sAboutDetails"
        android:textSize="@dimen/text_other_size"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textAbout2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/sAboutDetails2"
        android:textSize="@dimen/text_other_size" />

    <Button
        android:id="@+id/buttonMarket"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/sAboutMarket"
        android:textSize="@dimen/text_main_size" />

</LinearLayout>